#668 Increase Java PermGen size to 256M to fix out of memory issue